# SqlInjectionPOC

./: .gitignore  README.md  app.py  pyproject.toml  sqlite_pdo_grammar.pl  sqlite_pdo_lexer.pl  sqlite_pdo_parser.pl  test_sqlite_pdo_parser.pl
docs/grammar/: README.md  delete.md  expressions.md  insert.md  select.md  statements.md  tokens.md  update.md
grammar_rules/: common.pl  delete.pl  insert.pl  select.pl  update.pl
pdo_kanren/: __init__.py  analyzer.py  mini.py  web.py
pdo_kanren/static/: styles.css
pdo_kanren/templates/: index.html
tests/: test_pdo_kanren.py
